# dream-fit

./: dreamfitdb.sqlite3  manage.py  pyproject.toml
dreamfit/: asgi.py  settings.py  urls.py  wsgi.py
dreamfitdb/: admin.py  apps.py  models.py  serializers.py  views.py
dreamfitdb/migrations/: 0001_initial.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
