[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Yana Gulyaeva <chetenadolmao@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
